<resources>
    <string name="app_name">Temperatura Signa</string>
    <string name="action_settings">Settings</string>
    <string name="senderid">45313275341</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="emailbtnsend">Enviar email</string>
    <string name="title_activity_activity_info">ActivityInfo</string>
    <string name="msgtitle">Alerta!!!</string>
    <string name="logo_signa">Logo signa</string>
    <string name="nombre_del_centro">Nombre del centro</string>
    <string name="fecha">fecha</string>
    <string name="datos_dos_centro">Datos dos centro</string>
    <string name="title_activity_login">Signa</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Login / Registro</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_password">Pass demasiado corto</string>
    <string name="error_incorrect_password">Pass incorrecto</string>
    <string name="error_cuenta">Verifique los datos ingresados y que su cuenta este activa!</string>
    <string name="version">Temperatura Signa V 1.0 </string>
    <string name="mcode">www.m-code.com.ar \n  soporte@m-code.com.ar </string>
    <string name="legal">Prohibido el uso, reproduccion, copia por cualquier medio y cualquier uso no autorizado expresamente por M-code.  Signa y demas marcas pertenecen a sus respectivos dueños</string>
    <string name="sindato">SIN MAIL REGISTRADO!!</string>
    <string name="title_activity_notif">Notificar</string>
    <string name="enviar">Enviar</string>
    <string name="info_mssg">El mensaje sera enviado con el proposito de alertar a todos los usuarios de la aplicacion. Solo debe ser usado para casos reales de emergencia cuando por ningun otro medio se pudo contactar. Recuerde que tanto usted como los demas deben tener WiFi o datos Activo de lo contrario el mesaje podria no enviarse o recibirse.</string>
    <string name="action_mess">Notificar</string>
    <string name="energyMsg">Energia:</string>
    <string name="BombMsg">Bomba:</string>
    <string name="CompMesg">Comp:</string>


</resources>
